--- a/view/index.html
+++ b/view/index.html
@@ -68,6 +68,7 @@
                                 <label> Teste Tortoise</label>
                                 <label> Teste UP </label>
                                 <label> Teste 1 </label>
+                                <label> Teste Down </label>
                             </form>                           
                             </div>
                         </div>
